--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"build": "tsc && vite build",
 		"commit": "cz",
 		"dev": "vite --open",
+		"dev:staging": "vite --open --mode staging",
 		"prepare": "husky install",
 		"preview": "vite preview",
 		"preview:test": "start-server-and-test preview http://localhost:4173",
@@ -44,6 +45,7 @@
 		"react": "17.0.2",
 		"react-copy-to-clipboard": "^5.0.4",
 		"react-dom": "17.0.2",
+		"react-helmet": "^6.1.0",
 		"react-highlight-words": "^0.17.0",
 		"react-i18next": "^11.15.7",
 		"react-markdown": "^8.0.0",
