--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"build": "tsc && vite build",
 		"commit": "cz",
 		"dev": "vite --open",
+		"dev:mock": "vite --open --mode mock",
 		"dev:staging": "vite --open --mode staging",
 		"prepare": "husky install",
 		"preview": "vite preview",
@@ -102,6 +103,7 @@
 		"jsdom": "19.0.0",
 		"less": "^4.1.2",
 		"lint-staged": "12.3.5",
+		"mockjs": "^1.1.0",
 		"msw": "0.39.1",
 		"npm-run-all": "4.1.5",
 		"postcss": "8.4.8",
@@ -119,6 +121,7 @@
 		"typescript": "4.6.2",
 		"vite": "2.8.6",
 		"vite-plugin-imp": "^2.1.6",
+		"vite-plugin-mock": "^2.9.6",
 		"vite-plugin-pwa": "0.11.13",
 		"vite-tsconfig-paths": "3.4.1",
 		"vitest": "0.6.0",
