--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
 	},
 	"dependencies": {
 		"@ant-design/icons": "^4.7.0",
+		"@ant-design/pro-card": "^1.19.5",
 		"@ant-design/pro-form": "^1.57.0",
 		"@ant-design/pro-table": "^2.66.4",
+		"@ant-design/pro-utils": "^1.39.2",
 		"ahooks": "^3.1.13",
 		"antd": "^4.19.1",
 		"antd-img-crop": "^4.1.0",
